Thu Jan 20 12:05:36 2000  David A Helder  <dhelder@umich.edu>

	* HACKING: Updated "How to check out GNet anonymously"
	   for Gnome repository.

Thu Jan 20 11:41:17 2000  David A Helder  <dhelder@umich.edu>

	* src/*.[ch]: Moved most includes and definitions to
	    gnet-private.h.  This will make porting easier.

Wed Jan 19 15:48:29 2000  David A Helder  <dhelder@umich.edu>

	* src/gnet.c (gnet_io_channel_writen, gnet_io_channel_readn): 
	    Don't count bytes read/written if there was an error.
	* src/gnet.c (gnet_io_channel_readline): Try reading again if
	    we get G_IO_ERROR_AGAIN.
	
Tue Jan 18 13:59:57 2000  David A Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_get_name_nonblock): Fixed
	    bug in handling large addresses.
	* src/inetaddr.c: Fixed bugs in internal gnet_gethostby*
	    functions.  Changed them around a bit.

Tue Jan 18 12:50:38 2000  David A Helder  <dhelder@umich.edu>

	* debian/changelog: Updated to 0.1.5
	* debian/rules.in: Handle libtool naming correctly
	* debian/libgnet0.1.docs: Added (was just 'docs')

Tue Jan 18 12:12:13 2000  David A Helder  <dhelder@umich.edu>

	* configure.in: Added tests for variants of gethostbyname_r.
	                Define _REENTRANT
	* src/inetaddr.c: Added gnet_gethostbyname and gnet_gethostbyaddr
	    which use appropriate function based on config.h
	* TODO: Remove this improvement from list
	
	* src/gnet-private.h: Changed include to sys/socket.h
	* src/inetaddr.[ch]: Portablity fixed (thought I did these
	    on the 10th - oops)

	* configure.in: Upped version to 0.1.5 (not released yet)
	* src/ftp.[ch]: Added note that it was experimental

Mon Jan 17 11:16:39 2000  David A Helder  <dhelder@umich.edu>

	* HACKING: Added (based on Xavier's SUBMIT-PATCH)
	* TODO: Added more details
	* src/ftp.[ch]: Added (contributed by Xavier Nicolovici)
	* gnet.spec.in: Added (contributed by Xavier Nicolovici)

	* Makefile.am: Added HACKING
	* configure.in: Added gnet.spec
	* auto*: Brought up-to-date